[gd_scene load_steps=45 format=3 uid="uid://cjj6m416gm3re"]

[ext_resource type="Script" path="res://models/characters/player/player.gd" id="1_65km6"]
[ext_resource type="Texture2D" path="res://assets/players/player-sprite.png" id="2_axif8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5knsa"]
atlas = ExtResource("2_axif8")
region = Rect2(64, 122, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fmqs"]
atlas = ExtResource("2_axif8")
region = Rect2(64, 146, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vc2jm"]
atlas = ExtResource("2_axif8")
region = Rect2(64, 170, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xh7d4"]
atlas = ExtResource("2_axif8")
region = Rect2(0, 122, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4f6n"]
atlas = ExtResource("2_axif8")
region = Rect2(16, 122, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wrne"]
atlas = ExtResource("2_axif8")
region = Rect2(32, 122, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpdan"]
atlas = ExtResource("2_axif8")
region = Rect2(48, 122, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_k28vb"]
atlas = ExtResource("2_axif8")
region = Rect2(64, 122, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dj4is"]
atlas = ExtResource("2_axif8")
region = Rect2(80, 122, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjsfn"]
atlas = ExtResource("2_axif8")
region = Rect2(96, 122, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2nbf"]
atlas = ExtResource("2_axif8")
region = Rect2(112, 122, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifksu"]
atlas = ExtResource("2_axif8")
region = Rect2(0, 146, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xr4w"]
atlas = ExtResource("2_axif8")
region = Rect2(16, 146, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_lui2e"]
atlas = ExtResource("2_axif8")
region = Rect2(32, 146, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3crg"]
atlas = ExtResource("2_axif8")
region = Rect2(48, 146, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jeyrv"]
atlas = ExtResource("2_axif8")
region = Rect2(64, 146, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5xhq"]
atlas = ExtResource("2_axif8")
region = Rect2(80, 146, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pw5tu"]
atlas = ExtResource("2_axif8")
region = Rect2(96, 146, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwv4a"]
atlas = ExtResource("2_axif8")
region = Rect2(112, 146, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhmyt"]
atlas = ExtResource("2_axif8")
region = Rect2(0, 170, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlcnm"]
atlas = ExtResource("2_axif8")
region = Rect2(16, 170, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqun0"]
atlas = ExtResource("2_axif8")
region = Rect2(32, 170, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4pxf"]
atlas = ExtResource("2_axif8")
region = Rect2(48, 170, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ueih"]
atlas = ExtResource("2_axif8")
region = Rect2(64, 170, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8o08l"]
atlas = ExtResource("2_axif8")
region = Rect2(80, 170, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pibt"]
atlas = ExtResource("2_axif8")
region = Rect2(96, 170, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_msqfr"]
atlas = ExtResource("2_axif8")
region = Rect2(112, 170, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_g546g"]
atlas = ExtResource("2_axif8")
region = Rect2(80, 122, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7yxn"]
atlas = ExtResource("2_axif8")
region = Rect2(96, 146, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pg7bt"]
atlas = ExtResource("2_axif8")
region = Rect2(96, 170, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8wa8"]
atlas = ExtResource("2_axif8")
region = Rect2(80, 146, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_743vy"]
atlas = ExtResource("2_axif8")
region = Rect2(48, 170, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqkpp"]
atlas = ExtResource("2_axif8")
region = Rect2(32, 146, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_lr66m"]
atlas = ExtResource("2_axif8")
region = Rect2(32, 170, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3evlk"]
atlas = ExtResource("2_axif8")
region = Rect2(48, 146, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1n8od"]
atlas = ExtResource("2_axif8")
region = Rect2(0, 170, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldcmk"]
atlas = ExtResource("2_axif8")
region = Rect2(0, 146, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qevu"]
atlas = ExtResource("2_axif8")
region = Rect2(0, 122, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_vt1di"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5knsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fmqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vc2jm")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xh7d4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4f6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wrne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpdan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k28vb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dj4is")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjsfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2nbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifksu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xr4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lui2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3crg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jeyrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5xhq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pw5tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwv4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhmyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlcnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqun0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4pxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ueih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8o08l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pibt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msqfr")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g546g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7yxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pg7bt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8wa8")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_743vy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqkpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lr66m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3evlk")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1n8od")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldcmk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qevu")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q58w0"]
radius = 7.6875
height = 20.5

[sub_resource type="CircleShape2D" id="CircleShape2D_2j8k4"]
radius = 36.0

[sub_resource type="LabelSettings" id="LabelSettings_37ysh"]
font_size = 12

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 4
collision_mask = 59
script = ExtResource("1_65km6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(3.5, 3.5)
sprite_frames = SubResource("SpriteFrames_vt1di")
animation = &"idle"
frame_progress = 0.619373

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.375, -0.5)
scale = Vector2(2, 2)
shape = SubResource("CapsuleShape2D_q58w0")

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="DashTime" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="TrashPos" type="Marker2D" parent="."]
position = Vector2(0, -43)

[node name="TrashNode" type="Node2D" parent="TrashPos"]

[node name="TrashDetector" type="Area2D" parent="." groups=["player"]]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrashDetector"]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_2j8k4")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -58.0
offset_top = -61.0
offset_right = 63.0
offset_bottom = -35.0
text = "PRESS J TO PICK"
label_settings = SubResource("LabelSettings_37ysh")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="DashCooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="DashTime" to="." method="_on_dash_time_timeout"]
[connection signal="area_entered" from="TrashDetector" to="." method="_on_trash_detector_area_entered"]
[connection signal="area_exited" from="TrashDetector" to="." method="_on_trash_detector_area_exited"]
[connection signal="body_entered" from="TrashDetector" to="." method="_on_trash_detector_body_entered"]
[connection signal="body_exited" from="TrashDetector" to="." method="_on_trash_detector_body_exited"]
